crontab/logs/mlops-requirements/req_log_2024-10-06.log
  File "/home/ubuntu/mlops/crontab/update_req.sh", line 7
    export PATH="$HOME/.pyenv/bin:$PATH"
           ^^^^
SyntaxError: invalid syntax
